fix align

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ h2 {
 
 .navigation__item {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
 
   font-size: 15px;
   line-height: 15px;
